fix: 에러 해결 및 주석 추가
1. no-unused-vars eslint error 뜨는 에러 해결
2. 주석 추가

#8

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["prettier", "eslint:recommended", "next/core-web-vitals", "eslint-config-next"],
   "rules": {
     // 'React' must be in scope when using JSX 에러 해결 (Next.js)
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
